--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
   "scripts": {
     "new": "hexo new page",
     "generate": "hexo generate",
-    "server": "hexo server",
-    "deploy": "hexo deploy"
+    "server": "hexo server"
   },
   "dependencies": {
     "hexo": "^3.2.0",
