--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ timezone: Asia/Shanghai
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: https://longtian.io
+url: https://blog.longtian.io
 root: /
 permalink: :year/:month/:day/:title/
 permalink_defaults:
@@ -80,3 +80,7 @@ theme: landscape
 deploy:
 - type: git
   repo: git@github.com:longtian/blogs.git
+
+theme_config:
+  google_analytics: UA-58200086-6
+
