--- a/_config.yml
+++ b/_config.yml
@@ -4,8 +4,8 @@
 
 # Site
 title: 龙天的博客
-subtitle:
-description: 博客
+subtitle: 大前端，DevOps，敏捷开发
+description: 个人博客
 keywords:
 author: longtian
 language: zh-CN
