移除自定义字体，备案号，文章链接后缀为 html

--- a/themes/landscape/_config.yml
+++ b/themes/landscape/_config.yml
@@ -32,7 +32,7 @@ show_count: false
 # Miscellaneous
 google_analytics:
 gauges_analytics:
-favicon: /favicon.png
+favicon: /favicon.ico
 twitter:
 fb_admins:
 fb_app_id:
