--- a/_config.yml
+++ b/_config.yml
@@ -5,17 +5,18 @@
 # Site
 title: 龙天的博客
 subtitle: 大前端，DevOps，敏捷开发
-description: 个人博客
-keywords:
+description: 龙天的博客
+keywords: 技术博客
 author: longtian
 language: zh-CN
 timezone: Asia/Shanghai
+beian: 京ICP备18033139号
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
 url: https://blog.longtian.info
 root: /
-permalink: :year/:month/:day/:title/
+permalink: :year/:month/:day/:title.html
 permalink_defaults:
 pretty_urls:
   trailing_index: true # Set to false to remove trailing 'index.html' from permalinks
