--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,7 +4,8 @@ cache:
   paths:
     - node_modules/
 
-build:
+build_site:
+  stage: build
   script:
     - npm install
     - npm run build 
@@ -14,8 +15,9 @@ build:
       - public
 
 dep:
+  stage: deploy
   image: registry.longtian.info/longtian/ossutil
   script:
     - ls
   dependencies:
-    - build
+    - build_site
