--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,7 +18,7 @@ dep:
   stage: deploy
   image: registry.longtian.info/longtian/ossutil
   script:
-    - ossutil config -e oss-cn-beijing.aliyuncs.com -i $ID -k $KEY
+    - ossutil config -e oss-cn-beijing.aliyuncs.com -i $ID -k $SECRET
     - cp public oss://longtian-blog -r -f -u
     - ls
   dependencies:
