--- a/_config.yml
+++ b/_config.yml
@@ -102,7 +102,7 @@ feed:
   path: atom.xml
   limit: 20
   hub:
-  content:
+  content: true
   content_limit: 140
   content_limit_delim: ' '
   order_by: -date
