--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,6 @@ keywords: 技术博客
 author: longtian
 language: zh-CN
 timezone: Asia/Shanghai
-beian: 京ICP备18033139号
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
@@ -78,7 +77,7 @@ meta_generator: true
 date_format: YYYY-MM-DD
 time_format: HH:mm:ss
 ## Use post's date for updated date unless set in front-matter
-use_date_for_updated: false
+updated_option: date
 
 # Pagination
 ## Set per_page to 0 to disable pagination
@@ -112,6 +111,12 @@ feed:
 
 theme_config:
   google_analytics: UA-58200086-6
+  copyright: |-
+    <a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/">
+      <img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-nd/4.0/88x31.png" />
+    </a></br>
+    All website licensed under <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/" target="_blank">CC BY-NC-ND 4.0</a></br>
+    <a target="_blank" href="https://beian.miit.gov.cn/">京ICP备18033139号-2</a></br>
 
 sitemap:
   path: sitemap.xml
