--- a/themes/landscape/_config.yml
+++ b/themes/landscape/_config.yml
@@ -8,7 +8,21 @@ banner: "images/banner.jpg"
 # Content
 excerpt_link: Read More
 fancybox: true
-recent_posts_limits: 5
+
+# # Footer
+# copyright: |-
+#   <a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a></br>
+#   All website licensed under <a href="https://creativecommons.org/licenses/by/4.0/" target="_blank">CC BY 4.0</a></br>
+
+# Footer
+copyright:
+# Need help choosing? Please see...
+# https://creativecommons.org/choose/
+# https://choosealicense.com/
+# You can use html like below...
+# copyright: |-
+#   <a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a></br>
+#   All website licensed under <a href="https://creativecommons.org/licenses/by/4.0/" target="_blank">CC BY 4.0</a></br>
 
 # Sidebar
 sidebar: right
@@ -25,14 +39,15 @@ index_widgets:
 # - tagcloud
 # - archive
 
-# widget behavior
+# Widget behavior
 archive_type: 'monthly'
 show_count: false
+recent_posts_limits: 5
 
 # Miscellaneous
 google_analytics:
 gauges_analytics:
-favicon: /favicon.ico
+favicon: /favicon.png
 twitter:
 fb_admins:
 fb_app_id:
