google_analytics only on build

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,6 +8,7 @@ pages:
   stage: deploy
   script:
     - npm install
+    - hexo config theme_config.google_analytics UA-58200086-6
     - npm run build
   artifacts:
     paths:
