--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,7 +8,7 @@ pages:
   stage: deploy
   script:
     - npm install
-    - hexo config theme_config.google_analytics UA-58200086-6
+    - npm run config
     - npm run build
   artifacts:
     paths:
