--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,8 @@
+# Hexo Configuration
+## Docs: https://hexo.io/docs/configuration.html
+## Source: https://github.com/hexojs/hexo/
+
+# Site
 title: 龙天的博客
 subtitle: 大前端，DevOps，敏捷开发
 description: 龙天的博客
@@ -5,57 +10,100 @@ keywords: 技术博客
 author: longtian
 language: zh-CN
 timezone: Asia/Shanghai
-url: https://blog.longtian.info
+
+# URL
+## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
+url: https://blog.longtian.io
 root: /
 permalink: ':year/:month/:day/:title.html'
-permalink_defaults: null
+permalink_defaults: 
 pretty_urls:
-  trailing_index: true
-  trailing_html: true
+  trailing_index: true # Set to false to remove trailing 'index.html' from permalinks
+  trailing_html: true # Set to false to remove trailing '.html' from permalinks
+
+# Directory
 source_dir: source
 public_dir: public
 tag_dir: tags
 archive_dir: archives
 category_dir: categories
 code_dir: downloads/code
-i18n_dir: ':lang'
-skip_render: null
-new_post_name: ':title.md'
+i18n_dir: :lang
+skip_render: 
+
+# Writing
+new_post_name: :title.md # File name of new posts
 default_layout: post
-titlecase: false
+titlecase: false # Transform title into titlecase
 external_link:
-  enable: true
-  field: site
+  enable: true # Open external links in new tab
+  field: site # Apply to the whole site
   exclude: ''
 filename_case: 0
 render_drafts: false
 post_asset_folder: false
 relative_link: false
 future: true
+syntax_highlighter: highlight.js
 highlight:
-  enable: true
   line_number: true
   auto_detect: false
   tab_replace: ''
   wrap: true
   hljs: false
+prismjs:
+  preprocess: true
+  line_number: true
+  tab_replace: ''
+
+# Home page setting
+# path: Root path for your blogs index page. (default = '')
+# per_page: Posts displayed per page. (0 = disable pagination)
+# order_by: Posts order. (Order by date descending by default)
 index_generator:
   path: ''
   per_page: 10
-  order_by: '-date'
+  order_by: -date
+
+# Category & Tag
 default_category: uncategorized
-category_map: null
-tag_map: null
+category_map:
+tag_map:
+
+# Metadata elements
+## https://developer.mozilla.org/en-US/docs/Web/HTML/Element/meta
 meta_generator: true
+
+# Date / Time format
+## Hexo uses Moment.js to parse and display date
+## You can customize the date format as defined in
+## http://momentjs.com/docs/#/displaying/format/
 date_format: YYYY-MM-DD
 time_format: HH:mm:ss
-updated_option: date
+## updated_option supports 'mtime', 'date', 'empty'
+updated_option: 'date'
+
+# Pagination
+## Set per_page to 0 to disable pagination
 per_page: 10
 pagination_dir: page
-include: null
-exclude: null
-ignore: null
+
+# Include / Exclude file(s)
+## include:/exclude: options only apply to the 'source/' folder
+include:
+exclude:
+ignore:
+
+# Extensions
+## Plugins: https://hexo.io/plugins/
+## Themes: https://hexo.io/themes/
 theme: landscape
+
+# Deployment
+## Docs: https://hexo.io/docs/one-command-deployment
+deploy:
+  type: ''
+
 feed:
   type: atom
   path: atom.xml
@@ -69,6 +117,7 @@ feed:
   autodiscovery: true
   template: null
 theme_config:
+  google_analytics: UA-58200086-6
   copyright: >-
     <a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/">
       <img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-nd/4.0/88x31.png" />
@@ -77,8 +126,5 @@ theme_config:
     All website licensed under <a
     href="https://creativecommons.org/licenses/by-nc-nd/4.0/" target="_blank">CC
     BY-NC-ND 4.0</a></br>
-
-    <a target="_blank"
-    href="https://beian.miit.gov.cn/">京ICP备18033139号-2</a></br>
 sitemap:
   path: sitemap.xml
