use hexo deploy to publish

--- a/_config.yml
+++ b/_config.yml
@@ -102,7 +102,11 @@ theme: landscape
 # Deployment
 ## Docs: https://hexo.io/docs/one-command-deployment
 deploy:
-  type: ''
+  type: git
+  repo: git@github.com:longtian/blogs.git
+  branch: gh-pages
+  message: |
+    Site updated: {{ now('YYYY-MM-DD HH:mm:ss') }}
 
 feed:
   type: atom
